# portfolio-allocation

./: Pipfile  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: pypi-publish.yml
examples/: allocation.html  gnucash.html
funds_info/: __init__.py  __main__.py  allocation_report.py  assets.py  cli.py  currencies.py  funds.py  gnucash.py  securities.py
portfolio_allocation/: __init__.py  allocation_report.py  assets.py  cache.py  cli.py  funds.py  gnucash.py  util.py
portfolio_allocation/instruments/: __init__.py  all.py  currencies.py  custom.py  funds.py  instruments.py  model.py  securities.py  util.py
portfolio_allocation/instruments/sources/: currencies.py  custom.py  funds.py  securities.py
portfolio_allocation/report/: __init__.py  report.py
portfolio_allocation/report/resources/: main.css  main.js  report_template.html
